<resources>
    <string name="app_name">Toko Kembang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="item_detail_fragment_title">Item Details</string>
    <string name="text_beras_raskin">Beras Raskin</string>
    <string name="text_supplier">Supplier:</string>
    <string name="text_indofood">Indofood</string>
    <string name="text_qty">QTY:</string>
    <string name="text__20">20</string>
    <string name="text_date">Date:</string>
    <string name="text__22_02_2023">22/02/2023</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>