<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardElevation="10dp"
    android:elevation="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="18dp">

        <TextView
            android:id="@+id/tv_nama_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_beras_raskin"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_supplier_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/text_supplier"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/tv_supplier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_barang" />

        <TextView
            android:id="@+id/tv_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_indofood"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tv_supplier_title"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_barang" />

        <TextView
            android:id="@+id/tv_qty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/text_qty"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_date_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_nama_barang"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text__20"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tv_qty_title"
            app:layout_constraintTop_toTopOf="@id/tv_qty_title" />

        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/text_date"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_nama_barang"
            app:layout_constraintTop_toBottomOf="@id/tv_qty_title" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text__22_02_2023"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_date_title"
            app:layout_constraintTop_toBottomOf="@id/tv_qty" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>